# scriva

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Scriva Settings (standalone).html  VoiceFlow Settings (standalone).html  package-lock.json  package.json  project-desc.md  project-structure.md
.claude/agents/: tauri.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/scriva-core/: Cargo.toml
crates/scriva-core/src/: audio.rs  lib.rs  registry.rs  settings.rs
crates/scriva-core/src/providers/: claude.rs  gemini.rs  local_llama.rs  local_whisper.rs  mod.rs  openai_clean.rs  openai_transcribe.rs
crates/voiceflow-core/: Cargo.toml
crates/voiceflow-core/src/: audio.rs  lib.rs  settings.rs
crates/voiceflow-core/src/providers/: groq.rs
docs/: index.html
landing/: index.html
src/: index.html  overlay.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  commands.rs  config.rs  focus.rs  inject.rs  lib.rs  main.rs  menu_width.rs  models.rs  overlay.rs  updater.rs
