[workspace]
resolver = "2"
members = ["crates/scriva-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
authors = ["Soltan Garayev"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
