[package]
name = "scriva"
version = "0.1.0"
description = "Open-source, bring-your-own-key voice dictation. Hold a hotkey, speak, release."
authors = ["Soltan Garayev"]
license = "MIT"
edition = "2021"

[lib]
name = "scriva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
scriva-core = { path = "../crates/scriva-core", features = ["local-models"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
cpal = "0.16"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
block2 = "0.6"
