[package]
name = "scriva-core"
description = "Platform-independent core for Scriva: provider traits + adapters, audio processing, settings model."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
hound.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
