[package]
name = "scriva-core"
description = "Platform-independent core for Scriva: provider traits + adapters, audio processing, settings model."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
hound.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# On-device inference (whisper.cpp / llama.cpp). Deliberately empty until the
# engine deps land in M3 Phase 5; default OFF so `cargo test -p scriva-core`
# never needs cmake. src-tauri will enable it.
local-models = []
