[package]
name = "voiceflow-core"
description = "Platform-independent core for VoiceFlow: provider traits + adapters, audio processing, settings model."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
hound.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
